[package]
name = "actix_login"
version = "0.1.0"
authors = ["Yuta Tachihara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-identity = "0.3.1"
csv = "1.1.5"
env_logger = "0.8.3"
rand = "0.8.3"
serde = "1.0.123"
actix-session = "0.4.0"
actix-redis = "0.9.1"
base64 = "0.13.0"

# TODO
# write user data append mode.